kkmvp-1: add base-frontend

--- a/builder/rust/Dockerfile
+++ b/builder/rust/Dockerfile
@@ -1,4 +1,6 @@
 FROM docker.io/rust:1.82.0
 
+LABEL org.opencontainers.image.source=https://github.com/kamukirim/base-images
+
 WORKDIR /build
 RUN rustup toolchain add nightly
