kkmvp-1: add cloudflare intermediate cert

--- a/base/backend/Dockerfile
+++ b/base/backend/Dockerfile
@@ -3,12 +3,13 @@ FROM docker.io/debian:12
 LABEL org.opencontainers.image.source=https://github.com/kamukirim/base-images
 
 WORKDIR /root
+COPY Cloudflare_CA.pem .
+
 RUN apt-get update && \
     apt-get install -y \
     ca-certificates \
-    openssl \
-    wget
-RUN wget https://developers.cloudflare.com/cloudflare-one/static/Cloudflare_CA.pem
+    openssl
+RUN mkdir -p /usr/local/share/ca-certificates
 RUN cp Cloudflare_CA.pem /usr/local/share/ca-certificates/Cloudflare_CA.crt
 RUN update-ca-certificates
 
