--- a/builder/rust/Dockerfile
+++ b/builder/rust/Dockerfile
@@ -3,14 +3,21 @@ FROM docker.io/rust:1.82.0
 LABEL org.opencontainers.image.source=https://github.com/kamukirim/base-images
 
 WORKDIR /build
+COPY Cloudflare_CA.pem .
 
+RUN apt-get update && \
+    apt-get install -y \
+    ca-certificates \
+    openssl
+RUN mkdir -p /usr/local/share/ca-certificates
+RUN cp Cloudflare_CA.pem /usr/local/share/ca-certificates/Cloudflare_CA.crt
+RUN update-ca-certificates
 RUN rustup toolchain add nightly
 RUN apt-get update && \
     apt-get install -y \
     autoconf \
     automake \
     build-essential \
-    ca-certificates \
     clang \
     clang-format \
     clang-tidy \
@@ -32,6 +39,3 @@ RUN apt-get update && \
     python3-dev \
     wget \
     yasm
-RUN wget https://developers.cloudflare.com/cloudflare-one/static/Cloudflare_CA.pem
-RUN cp Cloudflare_CA.pem /usr/local/share/ca-certificates/Cloudflare_CA.crt
-RUN update-ca-certificates
